<resources>
    <string name="authorize_web">通过web页授权</string>
    <string name="open_system_photo">打开系统相册并分享</string>
    <string name="share_to_aweme">启动分享</string>
    <string name="set_default_title">设置默认话题</string>
    <string name="media_path">路径</string>

    <string name="add_photo_video">添加相片或视频</string>
    <string name="clear">清空</string>
    <string name="image">照片</string>
    <string name="video">视频</string>
    <string name="auth_success">授权成功</string>
    <string name="share_success">分享成功</string>
    <string name="scope_hint">必选权限(以 , 号间隔)</string>
    <string name="optional_scope">可选权限，默认不选（以 , 号间隔)</string>
    <string name="optional_1_scope">可选权限，默认选择（以 , 号间隔)</string>
    <string name="set_scope_btn">设置</string>

    <string name="app_name">TiktokOpenSDK</string>
    <string name="authorize_title">抖音openSdk</string>
    <string name="authorize">去Tiktok授权</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
