<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qxy.DataStructure.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/authorize_title" />
    <Button
        android:id="@+id/auth_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="抖音授权"/>

    <Button
        android:id="@+id/go_to_system_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/open_system_photo"
        />

    <Button
        android:id="@+id/share_to_tiktok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_aweme"
        android:visibility="gone" />

    <EditText
        android:id="@+id/set_default_hashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_default_title"
        android:visibility="gone"
      />

    <EditText
        android:id="@+id/media_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_path"
        android:textSize="16sp"
        android:visibility="gone"
       />

    <Button
        android:id="@+id/add_photo_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/add_photo_video"
        android:visibility="gone"
       />

    <Button
        android:id="@+id/clear_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/clear"
        android:visibility="gone"
       />


</LinearLayout>